Fix scrollbars

--- a/app/assets/stylesheets/_helpers.scss
+++ b/app/assets/stylesheets/_helpers.scss
@@ -27,6 +27,10 @@
   @extend %clearfix;
 }
 
+._clear-scroll {
+  @extend %clear-scroll-bars;
+}
+
 ._upper {
   text-transform: uppercase;
 }
